# actori-web-httpauth

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: middleware-closure.rs  middleware.rs
src/: lib.rs  middleware.rs
src/extractors/: basic.rs  bearer.rs  errors.rs  mod.rs
src/headers/authorization/: errors.rs  header.rs
src/headers/authorization/scheme/: basic.rs  bearer.rs  mod.rs
src/headers/www_authenticate/: header.rs
src/headers/www_authenticate/challenge/: basic.rs  mod.rs
src/headers/www_authenticate/challenge/bearer/: challenge.rs  errors.rs
